# DPPy

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  beta_ensembles.ipynb  discrete_dpps.ipynb  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: ci.yml
DPPy/: approximate_sampling.py  discrete_DPPs.py  exact_sampling.py  random_matrices.py
docs/: Makefile  biblio.bib  conf.py  index.rst  make.bat
docs/_images/: kernel.eps  original_graph.eps  sample_Aldous-Broder.eps  sample_DPP_exact.eps  sample_Wilson.eps  ust_histo.eps
docs/_static/: fix_equation_numbering.css
docs/_templates/: layout.html
docs/api_reference/: index.rst
docs/beta_ensembles/: api.rst  circular.rst  ginibre.rst  hermite.rst  index.rst  jacobi.rst  laguerre.rst
docs/bibliography/: biblio.bib  biblio_new.bib  index.rst
docs/continuous_dpps/: api.rst  beta_ensembles.banded_models.rst  beta_ensembles.definition.rst  beta_ensembles.full_matrix_models.rst  beta_ensembles.rst  beta_ensembles.sampling.rst  definition.rst  index.rst  multivariate_jacobi_ope.rst  properties.rst  sampling.rst
docs/discrete_dpps/: discrete_dpps.approximate_sampling.rst  discrete_dpps.definition.rst  discrete_dpps.exact_sampling.rst  discrete_dpps.mcmc_sampling.rst  index.rst  (+1 more)
dppy/: __init__.py  alpha_sampler.py  approximate_sampling.py  attempt_class.py  beta_ensemble_polynomial_potential.py  beta_ensemble_polynomial_potential_core.py  beta_ensembles.py  bless.py  chol_sampler.py  dcftp.py  descent_processes.py  discrete_DPPs.py  discrete_dpps.py  discrete_k-dpps.py  discrete_k_dpps.py  discrete_kdpps.py  exact_sampling.py  exotic_dpps.py  exotic_dpps_core.py  finite_dpps.py  finite_k_dpps.py  generic_kernel_sampler.py  intermediate_sampling.py  judge_ratio_of_determinants.py  mcmc_sampling.py  multivariate_jacobi_ope.py  poissonized_plancherel.py  projection_kernel_sampler.py  random_matrices.py  schur_sampler.py  spectral_sampler.py  utils.py  vfx_sampler.py  vfx_sampling.py
notebooks/: README.md  Tuto_DPPy.html  Tuto_DPPy.ipynb  beta_ensembles.ipynb  discrete_dpps.ipynb  exotic_dpps.ipynb  fast_sampling_of_beta_ensembles.ipynb  finite_dpps.ipynb  multivariate_jacobi_ensemble.ipynb  ust_histo.eps
scripts/: install.sh
tests/: test_RSK.py  test_array_checks.py  test_beta_ensembles_equilibrium_distribution.py  test_beta_ensembles_samplers.py  test_bless.py  test_cardinality_of_finite_dpp_samples.py  test_correlation_functions.py  test_descent_processes.py  test_elementary_symmetric_polynomials.py  test_finite_dpps_instantiation.py  test_finite_dpps_samplers.py  test_instanciation_of_finite_dpps.py  test_marginals.py  test_multivariate_jacobi_ope.py  test_plots.py  test_tracy_widom.py  test_uniform_permutation.py  test_ust_samplers.py  test_utils.py
(+133 files in other folders)
